Fix z-index of dropdown menu

--- a/src/main/html/css/pages/index.css
+++ b/src/main/html/css/pages/index.css
@@ -239,3 +239,6 @@ body, html {
   cursor: pointer;
 }
 
+.dropdown-menu {
+    z-index: 1500;
+}
